force-app/main/default/objects/Plan_of_Record__c/Plan_of_Record__c.object-meta.xml
<CustomObject>
    <description>Plan of Record - records of each POR for a site.</description>
    <label>Plan of Record</label>
    <nameField>
        <displayFormat>POR-{0}</displayFormat>
        <label>Plan of Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans of Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>