force-app/main/default/objects/Plan_of_Record__c/fields/Close_Out_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Complete_Date__c</fullName>
    <label>Close Out Complete Date</label>
    <type>Date</type>
</CustomField>