force-app/main/default/objects/Plan_of_Record__c/fields/Macro_Site__c.field-meta.xml
<CustomField>
    <fullName>Macro_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macro Site</label>
    <referenceTo>Macro_Site__c</referenceTo>
    <relationshipLabel>Plans of Record</relationshipLabel>
    <relationshipName>Plans_of_Record</relationshipName>
    <type>Lookup</type>
</CustomField>