force-app/main/default/objects/Plan_of_Record__c/fields/POR_Key__c.field-meta.xml
<CustomField>
    <fullName>POR_Key__c</fullName>
    <formula>IF(ISBLANK(Site_ID_Text__c),&apos;&apos;, Site_ID_Text__c) &amp; POR_Type__c &amp;  Project_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POR Key</label>
    <type>Text</type>
</CustomField>