force-app/main/default/objects/Plan_of_Record__c/fields/POR_Status__c.field-meta.xml
<CustomField>
    <fullName>POR_Status__c</fullName>
    <label>POR Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>