force-app/main/default/objects/Plan_of_Record__c/fields/POR_Type__c.field-meta.xml
<CustomField>
    <fullName>POR_Type__c</fullName>
    <label>POR Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>