force-app/main/default/objects/Plan_of_Record__c/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <label>Release Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>