force-app/main/default/objects/Plan_of_Record__c/fields/Remove_Equipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Remove_Equipment_Date__c</fullName>
    <label>Remove Equipment Date</label>
    <type>Date</type>
</CustomField>