force-app/main/default/objects/Plan_of_Record__c/fields/Remove_Equipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Remove_Equipment_Status__c</fullName>
    <label>Remove Equipment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>