force-app/main/default/objects/Plan_of_Record__c/fields/Site_Decommissioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Decommissioned_Date__c</fullName>
    <label>Site Decommissioned Date</label>
    <type>Date</type>
</CustomField>