force-app/main/default/objects/Plan_of_Record__c/fields/Site_Decommissioned_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Decommissioned_Status__c</fullName>
    <label>Site Decommissioned Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>